--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\Script\LookAtPlayer.cs" />
     <Compile Include="Assets\Script\Bullet.cs" />
     <Compile Include="Assets\Script\TurretBlueprint.cs" />
+    <Compile Include="Assets\Script\EndGameMenu.cs" />
     <Compile Include="Assets\Script\Merge.cs" />
     <Compile Include="Assets\Script\GameManager.cs" />
     <Compile Include="Assets\Script\Shop.cs" />
@@ -70,13 +71,13 @@
     <Compile Include="Assets\Script\NodeClick.cs" />
     <Compile Include="Assets\Script\Waypoints.cs" />
     <Compile Include="Assets\Script\Cameracontroller.cs" />
+    <Compile Include="Assets\Script\UI Script\MainMenu.cs" />
     <Compile Include="Assets\Script\Enemy.cs" />
     <Compile Include="Assets\Script\Live.cs" />
     <Compile Include="Assets\Script\NodeUI.cs" />
     <Compile Include="Assets\Script\UI Script\SettingButton.cs" />
     <Compile Include="Assets\Script\Node.cs" />
-    <Compile Include="Assets\Script\UI Script\MainMenu.cs" />
-    <Compile Include="Assets\Script\EndGameMenu.cs" />
+    <Compile Include="Assets\Script\Alert.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\SimpleSky\ReadMe.txt" />
