--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Buildmanager.cs" />
+    <Compile Include="Assets\Script\Alert.cs" />
     <Compile Include="Assets\Script\Turret.cs" />
     <Compile Include="Assets\Script\PlayerStat.cs" />
     <Compile Include="Assets\Script\Drag.cs" />
@@ -73,11 +74,12 @@
     <Compile Include="Assets\Script\Cameracontroller.cs" />
     <Compile Include="Assets\Script\UI Script\MainMenu.cs" />
     <Compile Include="Assets\Script\Enemy.cs" />
+    <Compile Include="Assets\Script\MoneyDropItem.cs" />
     <Compile Include="Assets\Script\Live.cs" />
     <Compile Include="Assets\Script\NodeUI.cs" />
     <Compile Include="Assets\Script\UI Script\SettingButton.cs" />
     <Compile Include="Assets\Script\Node.cs" />
-    <Compile Include="Assets\Script\Alert.cs" />
+    <Compile Include="Assets\Script\ScoreManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\SimpleSky\ReadMe.txt" />
